<resources>
    <string name="app_name">PayRemind</string>
    <string name="new_pay">New Pay</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_record">Удалить выбранную Запись?</string>
    <string name="delete_pay">Удалить элемент</string>
    <string name="edit_pay">Редактировать элемент</string>
    <string name="unexecuted_pay_table">Невыполненные платежи</string>
    <string name="subtitle_format">%1$d payment items</string>
    <string name="web_service_url">https://www.nbrb.by/api/exrates/rates/431</string>
    <string name="connect_error">Unable to connect to NBRB API server</string>
    <string name="read_error">Unable to read NBRB currency data</string>
    <string name="currency_info_table">Курс обмена валюты</string>
    <string name="currency_info_label">Текущий курс обмена</string>
    <string name="currency_name_label">Валюта (название)</string>
    <string name="currency_val_label">Стоимость (BYN)</string>
    <string name="save_val_course">Сохранить новый курс</string>
    <string name="currency_from_bank">Текущий курс НБРБ:</string>
    <string name="currency_manual">Текущий курс (ручной ввод):</string>
    <string name="refresh_val_course">Обновить курс банка</string>
    <string name="show_app_info">О Программе...</string>
    <string name="show_about">About...</string>
    <string name="show_exit">Выход</string>
    <string name="pay_exec_h">Часы (0...23):</string>
    <string name="pay_exec_m">Минуты (0...59):</string>
    <string name="pay_title_label">Наименование:</string>
    <string name="pay_descr_label">Описание:</string>
    <string name="pay_acc_id_label">Номер (идентификатор) счёта, номер/телеф:</string>
    <string name="pay_bank_name_label">Банк (компания, организиция):</string>
    <string name="pay_total_summ_label">Сумма платежа (0.0 - если неизвестна):</string>
    <string name="total_summ_per_month">Общая сумма (за месяц)</string>
    <string name="pay_parameters">Подробности платежа</string>
    <string name="pay_add_edit">Редактирование данных</string>
    <string name="pay_date_day_label">Day of Month</string>
    <string name="pay_period_label">Pay period</string>
    <string name="pay_title_hint">Enter a title for the pay.</string>
    <string name="btn_date_text">date</string>
    <string name="btn_time_text">time</string>
    <string name="btn_set_locked">БЛОКИРОВКА</string>
    <string name="btn_schedule">Расписание</string>
    <string name="btn_last_timestamp">Последний платеж</string>
    <string name="btn_set_date_time">Уст. дата/время</string>
    <string name="btn_clear_date_time">Очист. даты/вр.</string>
    <string name="pay_executed_label">Оплачено</string>
    <string name="show_clear_execute_flags">Сброс флагов платежей</string>
    <string name="show_clear_last_dates">Сброс дат выпол-х платежей</string>
    <string name="time_picker_title">Дата/Время платежа:</string>
    <string name="about">Pay Remind project - Cicerone Navigation Version</string>
    <string name="schedule">Расписание платежей</string>
    <string name="schedule_save">Сохранить Расписание</string>
    <string name="set_null_schedule">Очистить все месяцы</string>
    <string name="set_all_schedule">Установить все месяцы</string>
    <string name="delete_row_schedule">Удалить строку расписания</string>
    <string name="str_app_tune">Настройки программы</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="str_notifications">Извещения (сообщения)</string>
    <string name="str_filter_usd">Отфильтровать Валютные (USD)</string>
    <string name="str_prenotify">Предварительные</string>
    <string name="delete">Удаление элемента</string>
    <string name="delete_pay_record">Удаление выбранной записи</string>
    <string name="cancel_delete">Отмена удаления</string>
    <string name="cancel_erase">Отмена очистки</string>
    <string name="erase">Очистка</string>
    <string name="erase_all">Очистка флагов и дат платежа</string>
    <string name="erase_only_flags">Очистка только флагов платежа</string>
    <string name="currency_usd">USD</string>
    <string name="JANUARY">Январь</string>
    <string name="FEBRUARY">Февраль</string>
    <string name="MARCH">Март</string>
    <string name="APRIL">Апрель</string>
    <string name="MAY">Май</string>
    <string name="JUNE">Июнь</string>
    <string name="JULY">Июль</string>
    <string name="AUGUST">Август</string>
    <string name="SEPTEMBER">Сентябрь</string>
    <string name="OCTOBER">Октябрь</string>
    <string name="NOVEMBER">Ноябрь</string>
    <string name="DECEMBER">Декабрь</string>
    <string name="strBtn1day">1 День</string>
    <string name="strBtn2day">2 Дня</string>
    <string name="strBtn3day">3 Дня</string>
    <string name="strBtn4day">4 Дня</string>
    <string name="strBtn5day">5 Дней</string>
</resources>