<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/currency_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_info_label"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/currency_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_name_label"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/currency_value_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_val_label"
            android:padding="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/saveCurrencyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_val_course"
            android:padding="10dp">
        </Button>

        <Button
            android:id="@+id/refreshCurrencyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/refresh_val_course"
            android:padding="10dp">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>